Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42008

QGraphicsView: Item selection in rotated scene not working properly

    XMLWordPrintable

Details

    Description

      The selection rectangle is not properly translated to scene co-ordinates. To demonstrate the problem, run the demo application. Rotate the scene using the slider at the bottom. Then click between the squares to start a selection in the scene. Observe that the selected items do not correspond to the selection rectangle.

      Attachments

        For Gerrit Dashboard: QTBUG-42008
        # Subject Branch Project Status CR V

        Activity

          People

            vgt Eirik Aavitsland
            imoir Ian Moir
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes