tests/auto/widgets/graphicsview/qgraphicsview/tst_qgraphicsview.cpp
@@ -137,6 +137,7 @@ DECL|function|renderHints
 DECL|function|replayMouseMove
 DECL|function|reset
 DECL|function|resizeAnchor
+DECL|function|rotated_rubberBand
 DECL|function|rubberBandSelectionMode
 DECL|function|scene
 DECL|function|sceneEvent
